03_infrastructure/ingress/external-access/dev/grafana/ingressroute-patch-grafana.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  routes:
    - match: Host(`grafana.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: prometheus-operator-grafana
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
spec:
  routes:
    - match: Host(`grafana.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: prometheus-operator-grafana
          port: 80
